--- a/API/API.csproj
+++ b/API/API.csproj
@@ -14,4 +14,8 @@
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Common\Common.csproj" />
+	</ItemGroup>
+
 </Project>
