--- a/Products/Products.csproj
+++ b/Products/Products.csproj
@@ -16,4 +16,8 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="MassTransit" Version="8.1.3" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Common\Common.csproj" />
+	</ItemGroup>
 </Project>
